# tauri

./: .eslintignore  .eslintrc.js  .gitignore  .npmrc  .oxlintrc.json  Cargo.toml  changelog.config.js  jest.config.ts  oxlintrc.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.tsbuildinfo
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  tech_request.yml
.github/workflows/: ci.yaml
.husky/: pre-commit
.zed/: tasks.json
common/details/: package.json
common/details/src/: Details.tsx  Item.tsx  index.ts  types.ts
common/notify/: package.json
common/notify/src/: index.test.tsx  index.tsx
common/theme/: package.json
common/theme/src/: ThemeDrawerItem.tsx  cssVar.ts  index.css  index.tsx  themeSlice.ts
common/theme/src/ColorPicker/: Color.ts  ColorPicker.tsx  utils.ts
common/theme/src/ColorPicker/options/: FreeSelector.tsx  PredefinedSelector.tsx
common/theme/src/components/: ThemeDrawerItem.tsx
common/theme/src/utils/: cssVar.ts  youTheme.ts
common/time/: package.json
common/time/src/: format.ts  index.ts  init.ts
common/types/: package.json
common/types/src/: index.ts
config/test/: testSetup.ts  vitest.config.ts
config/types/: types.d.ts
crates/delay/: Cargo.toml
crates/delay/src/: lib.rs
