[workspace]
members = [
    "packages/http-client/src-tauri",
    "packages/movie",
    "packages/feiwen/src-tauri",
    "packages/remove",
    "packages/Hclipboard/src-tauri",
    "packages/ChatGPT/src-tauri",
    "packages/ChatGPT/extensions/url_search",
]
resolver = "2"

[profile.release]
strip = "symbols"

[workspace.dependencies]
# tauri
tauri = { version = "2.8.5" }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"

tauri-build = { version = "2.4.1" }
